--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,12 @@
     "private": true,
     "dependencies": {
         "express": "2.5.9",
-        "async": ">= 0.1.18",
-        "socket.io": ">= 0.8.7",
-        "underscore": ">= 1.2.1"
+        "async": "latest",
+        "socket.io": "latest",
+        "socket.io-client": "latest",
+        "underscore": "latest",
+        "winston": "latest",
+        "opts": "latest"
     },
     "devDependencies": {
         "mocha": ">= 0.12.1",
